[package]
name = "accumulate-api"
version = "0.1.0"
authors = ["Sergey Bushnyak <sergey.bushnyak@sigrlami.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
# FIXME: Currently a lot of jsonrpc-* crates depend on entire `futures` being
# re-exported but it's not strictly required for this crate. Either adapt the
# remaining crates or settle for this re-export to be a single, common dependency
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
futures-executor = { version = "0.3", optional = true }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
jsonrpc-client-core = "0.5.0"
serde_json = "1.0"

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]
[dev-dependencies]
futures = "0.1.25"
failure = "0.1.5"

  [dev-dependencies.autorand]
  version = "0.2.2"
  features = [ "json", "json-value-always-null", "limited-integers" ]
    
[features]
default = ["futures-executor", "futures"]
arbitrary_precision = ["serde_json/arbitrary_precision"]
