[package]
name = "accumulate-api"
version = "0.1.0"
authors = ["Sergey Bushnyak <sergey.bushnyak@sigrlami.eu>"]
edition = "2021"
description = "Lower-level API for interfacing with the Accumulate Protocol via JSON-RPC"
categories = ["asynchronous", "api-bindings", "network-programming"]
keywords = ["accumulate", "api", "jsonrpc", "rpc", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["json", "gzip"], default-features = false }
thiserror = "1.0"
serde = {version = "1.0.195", features=['derive']}
serde_json = "1.0.111"

[dev-dependencies]
failure = "0.1.5"

[dev-dependencies.autorand]
version = "0.2.2"
features = ["json", "json-value-always-null", "limited-integers"]
