[package]
name = "accumulate-api"
version = "0.1.0"
authors = ["Sergey Bushnyak <sergey.bushnyak@sigrlami.eu>"]
edition = "2021"
description = "Lower-level API for interfacing with the Accumulate Protocol via JSON-RPC"
categories = ["asynchronous", "api-bindings", "network-programming"]
keywords = ["accumulate", "api", "jsonrpc", "rpc", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
name = "accumulate_api"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.77"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["default-tls", "json"], default-features = false }
thiserror = "1.0"
serde = {version = "1.0.195", features=['derive']}
serde_json = "1.0.111"
tokio = {version = "1", features = ["full"]}
env_logger = "0.9"

[dev-dependencies]
failure = "0.1.5"
tokio = {version = "1", features = ["full"]}
